--- a/src/index.html
+++ b/src/index.html
@@ -45,17 +45,26 @@
     </div>
     <!-- colors -->
     <div class="p-20 bg-gray-800 space-y-2">
-        <div class="p-4 rounded-lg bg-teal-50 text-teal-950">I am a box</div>
-        <div class="p-4 rounded-lg bg-teal-100 text-teal-900">I am a box</div>
-        <div class="p-4 rounded-lg bg-teal-200 text-teal-800">I am a box</div>
-        <div class="p-4 rounded-lg bg-teal-300 text-teal-700">I am a box</div>
-        <div class="p-4 rounded-lg bg-teal-400 text-teal-600">I am a box</div>
+        <div class="p-4 rounded-lg bg-teal-50 text-teal-950 hover:bg-red-700 hover:text-red-200 transition duration-1000 ease-out transform hover:translate-x-3">I am a box</div>
+        <div class="p-4 rounded-lg bg-teal-100 text-teal-900 ">I am a box</div>
+        <div class="p-4 rounded-lg bg-teal-200 text-teal-800 hover:scale-105">I am a box</div>
+        <div class="p-4 rounded-lg bg-teal-300 text-teal-700 animate-bounce">I am a box</div>
+        <div class="p-4 rounded-lg bg-teal-400 text-teal-600 ">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-500 text-teal-200">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-600 text-teal-400">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-700 text-teal-300">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-800 text-teal-200">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-900 text-teal-100">I am a box</div>
         <div class="p-4 rounded-lg bg-teal-950 text-teal-50">I am a box</div>
+    </div>
+    <!-- gradient -->
+    <!--
+    1.set a class for gradient
+    2.set a starting middle and end color 
+     -->
+    <div class="p-20 flex items-center justify-center bg-gradient-to-r from-red-400 via-pink-400 to-purple-400">
+        <h1 class="text-6xl font-bold bg-clip-text text-transparent bg-gradient-to-br from-white to-teal-8400">Whoa Gradients!</h1>
+
     </div>
 </body>
 </html>
