--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
     </div>
     <!-- container -->
-    <div class="py-20 bg-gray-200">
+    <div class="p-20 bg-gray-200">
         <div class="container mx-auto ">
             <div class="bg-white p-10 rounded-lg shadow-lg relative">
                 <div class="absolute top-0 right-0 bg-red-500 text-red-200 rounded py-2 px-2 text-sm transform translate-x-2 -translate-y-2">
