--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,48 @@
             </div>
         </div>
     </div>
+    <!-- responsive design -->
+     <div class="p-20 bg-blue-200">
+        <!-- color as responsive -->
+        <h2 class="text-6xl text-black [ md:text-red-600 ] [ lg:text-yellow-900 ] ">Mobile First</h2>
+
+        <h2 class=" text-3xl md:text-4xl lg:text-6xl">
+            Different Size per device
+        </h2>
+
+        <!-- stacking vs side by side -->
+         <div class="md:flex md:space-x-2">
+            <div class="p-10 bg-white mt-10 md:w-1/2">
+                on mobile we stack
+            </div>
+            <div class="p-10 bg-white mt-10 md:w-1/2">
+                on desktop, we are side by side
+            </div>
+         </div>
+     </div>
+     <!-- Flexbox -->
+      <div class="p-20">
+        <div class="bg-green-800 h-64 flex justify-center items-center">
+            <h2 class="text-4xl text-green-100">Centered!</h2>
+        </div>
+        <div class="bg-gray-300 p-10 flex justify-between">
+            <div>Logo</div>
+            <div>Navigation</div>
+        </div>
+        <div class="bg-yellow-300 p-10 md:flex md:space-x-8 space-y-4 md:space-y-0">
+            <div class="bg-white p-2 flex-shrink">hello</div>
+            <div class="bg-white p-2 flex-grow">hello</div>
+            <div class="bg-white p-2 flex-grow">hello</div>
+        </div>
+        <div class="bg-teal-700 h-64 p-2">
+            <div class="md:flex h-full items-stretch">
+                <div class="bg-orange-400 p-10 md:w-1/5 [ hidden md:block ]">Sidebar</div>
+                <div class="bg-teal-600 p-10 md:flex-grow">Content</div>
+            </div>
+        </div>
+      </div>
+      <!-- Grid -->
+    
 
 </body>
 </html>
