--- a/src/index.html
+++ b/src/index.html
@@ -121,6 +121,28 @@
         </div>
       </div>
       <!-- Grid -->
+        <div class="bg-teal-400 text-teal-800 p-20 grid grid-cols-3 gap-2">
+            <div class="bg-green-100 rounded p-5">card 1</div>
+            <div class="bg-green-100 rounded p-5">card 2</div>
+            <div class="bg-green-100 rounded p-5">card 3</div>
+            <div class="bg-green-100 rounded p-5">card 4</div>
+            <div class="bg-green-100 rounded p-5">card 5</div>
+            <div class="bg-green-100 rounded p-5">card 6</div>
+        </div>
+        <div class="bg-teal-500 p-20 text-teal-100 grid grid-cols-3 grid-rows-3 gap-3">
+            <div class="bg-teal-900  rounded p-5">card 1</div>
+            <div class="bg-teal-900  rounded p-5 row-span-2">card 2</div>
+            <div class="bg-teal-900  rounded p-5">card 3</div>
+            <div class="bg-teal-900  rounded p-5 row-span-2">card 4</div>
+            <div class="bg-teal-900  rounded p-5 row-span-2">card 5</div>
+            <div class="bg-teal-900  rounded p-5">card 6</div>
+        </div>
+        <div class="bg-teal-600 p-20 text-orange-600 grid grid-cols-4 grid-rows-3 gap-3">
+            <div class="bg-orange-300 rounded p-5 row-span-3">Image</div>
+            <div class="bg-orange-300 rounded p-5 col-span-2 row-span-2 flex items-center justify-center">Content</div>
+            <div class="bg-orange-300 rounded p-5 ">Something</div>
+            <div class="bg-orange-300 rounded p-5 row-start-3 col-start-2 col-span-3">Footer</div>
+        </div>
     
 
 </body>
