--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,38 @@
             <div class="bg-orange-300 rounded p-5 ">Something</div>
             <div class="bg-orange-300 rounded p-5 row-start-3 col-start-2 col-span-3">Footer</div>
         </div>
+        <!-- card component -->
+        <div class="p-20 bg-blue-200">
+            <h3 class="text-blue-500 mb-2 text-sm font-bold">1. Card with no Image</h3>
+            <div class="bg-white p-6 rounded-lg shadow-lg">
+                <h2 class="font-bold mb-2 text-2xl text-gray-800">Card with no Image</h2>
+                <p class="text-gray-700">This is my cool new card!</p>
+            </div>
+        </div>
+        <!-- card with image -->
+        <div class="p-20 bg-purple-400 ">
+            <h3 class="text-purple-200 font-bold mb-4">2. Card with image</h3>
+            <div class="bg-white rounded-lg shadow-lg md:w-1/2 w-full">
+                <img src="https://images.unsplash.com/photo-1755845711249-32cfcdcabfeb?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="desert" class="rounded-t-lg">
+                <div class="p-6">
+                    <h2 class="font-bold mb-2 text-2xl text-purple-800">Card with an Image</h2>
+                    <p class="text-purple-700 mb-2">This is a little bit better card!</p>
+
+                    <a href="#" class="text-purple-600 underline text-sm hover:text-purple-500">Read more</a>
+                </div>
+            </div>
+        </div>
+        <!-- horizontal card -->
+        <div class="p-20 bg-orange-100">
+            <h3 class="text-orange-700 font-bold mb-4">3.Horizontal &amp responsive card</h3>
+            <div class="bg-white rounded-lg shadow-2xl md:flex">
+                <img src="https://plus.unsplash.com/premium_photo-1755105193614-d59a8a411c56" alt="old man" class="md:w-1/3 rounded-t-lg md:rounded-l-lg md:rounded-t-none">
+                <div class="p-6">
+                    <h2 class="font-bold text-xl md:text-3xl mb-2 text-orange-950">Horizontal Card</h2>
+                    <p class="text-orange-800">Look at me sideways</p>
+                </div>
+            </div>
+        </div>
     
 
 </body>
