--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,32 @@
                 </div>
             </div>
         </div>
+        <!-- buttons components -->
+         <div class="p-20 bg-blue-200 flex justify-center space-x-3">
+            <a href="#" class="bg-red-600 hover:bg-red-500 py-3 px-8 rounded text-red-300 transition duration-200">Learn More</a>
+            <a href="#" class="bg-orange-600 hover:bg-orange-500 py-3 px-8 rounded-full text-orange-200 transition duration-500">Login</a>
+            <a href="#" 
+            class="
+            bg-yellow-600 hover:bg-yellow-500 
+            py-3 px-8 rounded-lg 
+            text-yellow-200 
+            border-b-4 border-yellow-700 hover:border-yellow-600 
+            transition duration-300">Sign Up</a>
+         </div>
+         <div class="p-20 bg-pink-200 flex justify-center space-x-8 text-2xl">
+            <a href="#" class="border-4 border-pink-400 rounded py-4 px-8 text-pink-600 hover:text-pink-300 transition duration-500 font-bold">Do it</a>
+            <a href="#" class="bg-pink-300 hover:bg-white rounded-full py-3 px-8 shadow-md hover:shadow-2xl transition duration-500 text-pink-800 flex items-center">Don't do it</a>
+         </div>
+         <div class="p-20 bg-teal-200 flex justify-center items-center space-x-8">
+            <div class="flex text-center ">
+                <a href="#" class="bg-green-400 py-2 w-16 rounded-l hover:bg-green-500 transition delay-300">👈</a>
+                <a href="#" class="bg-green-400 py-2 w-16 hover:bg-green-500 transition delay-300">1</a>
+                <a href="#" class="bg-green-400 py-2 w-16 hover:bg-green-500 transition delay-300">2</a>
+                <a href="#" class="bg-green-400 py-2 w-16 rounded-r hover:bg-green-500 transition delay-300">👉</a>
+            </div>
+             <a href="#" class="bg-pink-300  pl-6 rounded-full flex items-center text-red-700"><span class="mr-5">Click This</span>  <span class="bg-pink-200 w-16 h-16 rounded-full flex justify-center items-center">❤️</span></a>
+         </div>
+        
     
 
 </body>
