--- a/src/index.html
+++ b/src/index.html
@@ -200,8 +200,55 @@
             </div>
              <a href="#" class="bg-pink-300  pl-6 rounded-full flex items-center text-red-700"><span class="mr-5">Click This</span>  <span class="bg-pink-200 w-16 h-16 rounded-full flex justify-center items-center">❤️</span></a>
          </div>
-        
-    
+         <!-- form component -->
+        <div class="bg-yellow-200 p-20">
+            <div class="bg-white p-10 rounded-lg shadow-lg md:w-3/4 mx-auto lg:w-1/2">
+                <form action="">
+                    <div class="mb-5">
+                        <label for="name" class="block mb-2 font-bold text-gray-600">Name</label>
+                        <input type="text" id="name" placeholder="Aman Coding"
+                        name="name" class="border border-gray-400 shadow p-3 w-full rounded">
+                    </div>
+                    <div class="mb-10">
+                        <label for="twitter" class="block mb-2 font-bold text-gray-600">Twitter</label>
+                        <input type="text" id="twitter" placeholder="@Amancode" class="border border-red-400 shadow p-3 w-full rounded">
+                        <p class="text-red-400 text-sm mt-2">Twitter username is required.</p>
+                    </div>
+                    <button  class="block w-full bg-yellow-500 text-yellow-900  font-bold p-4 rounded hover:bg-yellow-400">Submit</button>
+                </form>
+            </div>
+        </div>
+        <!-- minimal form -->
+        <div class="bg-pink-700 p-20">
+            <div class="bg-white p-10 md:w-2/3 lg:w-1/2 mx-auto">
+                <form action="">
+                    <div class="flex items-center mb-5">
+                        <label for="name" class="w-20 inline-block text-right mr-6 text-gray-500 font-bold">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Aman Singh" class="border-b-2 border-pink-700 focus:border-emerald-600 flex-grow py-2 placeholder-pink-300 outline-none">
+                    </div>
+                    <div class="flex items-center mb-10">
+                        <label for="twitter" class="w-20 inline-block text-right mr-6 text-gray-500 font-bold">Twitter</label>
+                        <input type="text" id="twitter" placeholder="@Amansingh" class="border-b-2 border-pink-700 focus:border-emerald-600 flex-grow py-2 placeholder-pink-300 outline-none">
+                    </div>
+                    <div class="text-right">
+                        <button class="py-3 px-8 bg-pink-500 text-white font-bold ">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="bg-teal-700 p-20 text-xl">
+            <form action="" class="md:w-1/2 mx-auto">
+                <div class="flex items-center bg-teal-400 rounded-t-lg border-b-4 border-teal-800"> 
+                    <label for="name" class="w-20 text-right mr-8 text-teal-800">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Aman" class="flex-grow p-4 pl-0 bg-transparent placeholder-teal-200 outline-none  text-slate-50">
+                </div>
+                <div class="flex items-center bg-teal-400 rounded-b-lg mb-5">
+                    <label for="twitter" class="w-20 text-right mr-8 text-teal-800">Twitter</label>
+                    <input type="text" id="twitter" placeholder="@twitter" class="flex-grow p-4 pl-0 bg-transparent placeholder-teal-200 outline-none text-slate-50">
+                </div>
+                <button class="block w-full rounded bg-white text-teal-800 font-bold py-3 hover:bg-teal-500 hover:text-white shadow-lg">Submit</button>
+            </form>
+        </div>
 
 </body>
 </html>
